@@ -1,5 +1,182 @@
 ## Status
 
+**Session 32** — ROCm/HIP backend for AMD GPU inference via Panama FFI.
+
+### AMD GPU support (ROCm/HIP + rocBLAS)
+
+Full first-class AMD GPU support alongside the existing NVIDIA CUDA backend. The GPU
+abstraction layer auto-selects CUDA > ROCm > CPU at startup with no configuration required.
+Tested on AMD Radeon RX 7900 XT (gfx1100, ROCm 7.2.x).
+
+**New production classes (`node` module):**
+
+- **`GpuBindings`** — vendor-neutral interface implemented by `CudaBindings` and `RocmBindings`.
+  Exposes all device runtime and BLAS handles as `MethodHandle` accessors, shared constants
+  (`H2D`, `D2H`, `STREAM_NON_BLOCKING`), and static helpers (`check`, `callInt`, `loadLibrary`,
+  `bind`). Static helpers eliminate per-implementation boilerplate.
+- **`GpuMatVec`** — sealed interface (`permits CudaMatVec, RocmMatVec`) extending `MatVec`.
+  Exposes `upload(float[], int, int)` and `uploadHalf(float[], int, int)` so transformer
+  handlers depend on the GPU abstraction rather than a concrete vendor class.
+- **`RocmBindings`** — Panama FFI downcall handles for `libamdhip64.so` and `librocblas.so`.
+  Pre-binds `hipHostMalloc flags=0` via `MethodHandles.insertArguments` to match the
+  `cudaMallocHost` arity visible to all callers. Key ROCm constants: `opTranspose()=112`
+  (`rocblas_operation_transpose`), `hipDeviceProp_t` sizeof=1472, name@0, totalGlobalMem@288
+  (measured from ROCm 7.2.x headers, Linux x86_64).
+- **`RocmAvailability`** — HIP device detection: `isAvailable()`, `deviceCount()`,
+  `deviceName(int)`, `vramBytes(int)`. Mirrors `CudaAvailability` in structure.
+- **`RocmMatVec`** — `MatVec` / `GpuMatVec` implementation backed by `rocblas_sgemv` (FP32)
+  and `rocblas_hssgemv_strided_batched` (FP16). Three compute paths:
+  - Host FP32: temporary device buffers per call; synchronous H2D → kernel → D2H.
+  - Device-resident FP32 (`DeviceFloatMatrix`): per-thread scratch for x/y; async stream copies.
+  - Device-resident FP16 (`DeviceHalfMatrix`): x converted FP16 in off-heap arena; FP32 accumulation.
+  Off-heap `Arena.ofConfined()` staging for all H2D/D2H copies — required by Java 25 Panama
+  (heap segments rejected by native downcalls).
+- **`MatVecBackend`** — enum replacing ad-hoc string literals for the `juno.MatVec.backend` JFR
+  dimension. Values: `CPU`, `CUDA`, `CUDA_RESIDENT`, `CUDA_RESIDENT_FP16`, `ROCM`,
+  `ROCM_RESIDENT`, `ROCM_RESIDENT_FP16`. Label strings are part of the JFR contract and unchanged.
+
+**Modified production classes:**
+
+- **`GpuContext`** — refactored from CUDA-only to backend-agnostic. Adds `GpuBindings bindings`
+  field, `bindings()` accessor, `selectBindings()` (CUDA → ROCm priority order with
+  `-Djuno.gpu.backend=cuda|rocm|auto` override), `createMatVec()` factory, `backendLabel()`
+  delegate. `close()` uses `bindings.cublasDestroy()` instead of hardcoded CUDA call.
+  Private `deviceName()` and `deviceVram()` helpers use `GpuBindings` struct-offset accessors.
+- **`CudaBindings`** — adds `implements GpuBindings`; 20 accessor methods expose the existing
+  `MethodHandle` fields to vendor-neutral callers. Zero existing fields or constants removed.
+- **`CudaAvailability`** — field-access calls updated to use `CudaBindings.instance()` accessor
+  methods (`PROP_NAME_OFFSET` → `instance().PROP_NAME_OFFSET`, etc.).
+- **`CudaMatVec`** — implements `GpuMatVec` (was `MatVec`); `upload` / `uploadHalf` made public
+  with `@Override`; backend labels replaced by `MatVecBackend` enum calls.
+- **`DeviceFloatMatrix` / `DeviceHalfMatrix`** — direct `CudaBindings.instance()` field access
+  replaced by `GpuContext#bindings()` method calls (`GpuBindings`). Both classes now work
+  identically on CUDA and ROCm. `DeviceHalfMatrix` caches `gpu = ctx.bindings()` at construction.
+- **`LlamaTransformerHandler`** — `instanceof CudaMatVec` → `instanceof GpuMatVec` for weight
+  upload gate; `cudaMalloc` OOM message check extended to also catch `hipMalloc`;
+  `matVecQuantBackendLabel(int)` → `matVecQuantBackend(int)` returns `MatVecBackend.CPU`.
+- **`Phi3TransformerHandler`** — same `instanceof` fix; OOM check extended to `hipMalloc`.
+- **`LoraTrainableHandler`** — same `instanceof` fix.
+- **`ForwardPassHandlerLoader`** — `pickMatVec` checks both `CudaAvailability` and
+  `RocmAvailability`; device count query reads from the available backend; `GpuContext.shared(dev).createMatVec()` replaces `new CudaMatVec(...)`.
+- **`EmbeddedNodeServer`** — uses `gpuContext.createMatVec()` and `gpuContext.backendLabel()`
+  for log messages.
+- **`ConsoleMain` / `JunoPlayer`** — `new CudaMatVec(gpuCtx)` → `gpuCtx.createMatVec()`.
+- **`MatVecEvent`** — adds `backend(MatVecBackend)` setter to avoid hand-written label strings
+  at call sites; public `String backend` field kept for JFR contract.
+
+**New tests (55 total, 0 failures on RX 7900 XT):**
+
+- `RocmMatVecTest` (30) — extends `MatVecBackendContractTest` for full API parity; correctness
+  vs CPU reference at 2048×2048, 5632×2048, 32000×2048; trivial known-value cases;
+  4-thread concurrent safety; throughput sanity.
+- `RocmAvailabilityTest` (8) — device detection present/absent; name format; VRAM bounds;
+  out-of-range index fallbacks.
+- `GpuContextTest` +5 `@Tag(rocm)` — ROCm context lifecycle, backend priority,
+  `createMatVec` factory, shared singleton, system-property override.
+- `ForwardPassHandlerLoaderSelectBackendTest` +2 `@Tag(rocm)` — `RocmMatVec` routing,
+  process-wide `GpuContext.shared(0)` reuse.
+- `ForwardPassHandlerLoaderSelectLoraBackendTest` +1 `@Tag(rocm)` — LoRA routing on ROCm.
+- `MatVecQuantizedBackendLabelTest` — updated to use `MatVecBackend` enum constants.
+
+Run ROCm-tagged tests:
+```bash
+mvn test -pl node -Dgroups=rocm
+```
+
+**Performance (RX 7900 XT, ROCm 7.2.x):**
+
+| Shape | Path | Time (5 runs) |
+|-------|------|--------------|
+| 32000×2048 | `rocblas_sgemv` host FP32 | 408 ms |
+
+All existing 194 unit tests pass unchanged.
+
+---
+
+## Status
+
+**Session 31** — Panama FFI for Juno math: JavaCPP / bytedeco removed, CUDA bindings rewritten with `java.lang.foreign`.
+
+### Panama FFI GPU bindings (`node` module)
+
+The entire CUDA bridge has been rewritten using the Java 25 Panama Foreign Function & Memory API
+(`java.lang.foreign.Linker`, `SymbolLookup`, `MemorySegment`, `Arena`). The `org.bytedeco:cuda-platform`
+dependency has been removed from `node/pom.xml`.
+
+**New production class:**
+
+- **`CudaBindings`** — Panama FFI downcall handles for `libcudart.so.12` and `libcublas.so.12`.
+  Resolves all CUDA Runtime and cuBLAS symbols once at class-init time via `Linker` and
+  `SymbolLookup`; resulting `MethodHandle` instances are thread-safe with zero per-call Java overhead.
+  Exposes: `cudaGetDeviceCount`, `cudaGetDeviceProperties`, `cudaSetDevice`, `cudaMalloc`,
+  `cudaFree`, `cudaMallocHost`, `cudaFreeHost`, `cudaMemcpy`, `cudaMemcpyAsync`,
+  `cudaStreamCreateWithFlags`, `cudaStreamSynchronize`, `cudaStreamDestroy`,
+  `cublasCreate`, `cublasDestroy`, `cublasSetStream`, `cublasSetPointerMode`,
+  `cublasSgemv`, `cublasHSSgemvStridedBatched`.
+  `cudaDeviceProp` struct-offset constants (`DEVICE_PROP_BYTES=1512`, `PROP_NAME_OFFSET=0`,
+  `PROP_TOTAL_MEM_OFFSET=288`) measured from CUDA 12.x headers on Linux x86_64.
+  Singleton init: `CudaBindings.instance()` / `CudaBindings.isAvailable()`.
+
+**Modified production classes:**
+
+- **`CudaMatVec`** — all JNI / JavaCPP call sites replaced with `CudaBindings` downcall handles.
+  Native memory managed exclusively via `MemorySegment` and `Arena`. Device weight matrices
+  (`DeviceFloatMatrix`, `DeviceHalfMatrix`) held resident; `MemorySegment` passed directly to
+  cuBLAS as `ADDRESS` — zero H2D copy per token. Per-thread `Fp32Scratch` / `Fp16Scratch`
+  scratch on device grown lazily and reused. FP16 x staging packed with `Float.floatToFloat16`
+  into a confined off-heap arena in the hot path.
+- **`GpuContext`** — cuBLAS handle stored as `MemorySegment` (opaque `cublasHandle_t`); created
+  and destroyed via `CudaBindings`. `cublasSerializationLock()` serializes stream-binding and
+  kernel submission on the shared handle. `shared(int)` returns a process-wide singleton per
+  device index.
+- **`DeviceFloatMatrix`** — device memory allocated via `CudaBindings.deviceMalloc`; backing
+  `MemorySegment` sized to `rows * cols * 4` bytes; H2D via synchronous `cudaMemcpy`.
+- **`DeviceHalfMatrix`** — same pattern; FP16 x staging via confined arena; `MemorySegment.ofArray`
+  pins heap array for duration of downcall.
+- **`CudaAvailability`** — device detection updated to use `CudaBindings` downcall handles.
+
+**`node/pom.xml`:** `org.bytedeco:cuda-platform` dependency removed.
+`maven-surefire-plugin` `argLine` updated: `--enable-native-access=ALL-UNNAMED`,
+`--add-opens java.base/java.lang=ALL-UNNAMED`, `--add-opens java.base/java.nio=ALL-UNNAMED`.
+
+**New test: `CudaBindingsTest`** — two scenarios:
+- CUDA present (`@Tag("gpu")`): every `MethodHandle` non-null, singleton loads cleanly.
+- CUDA absent (CPU-only CI): `isAvailable()` returns false, `instance()` throws `IllegalStateException`.
+
+Run GPU-tagged tests: `mvn test -Dgroups=gpu -pl node`
+
+All existing tests pass unchanged.
+
+---
+
+## Status
+
+**Session 30** — Maven Central publish configuration.
+
+### Maven Central publish (`pom.xml`, all module POMs)
+
+All modules configured for publishing to `central.sonatype.org` via the Central Portal publisher.
+Version set to `0.1.0-RC` across root POM and `juno-bom`.
+
+**Changes:**
+
+- **`maven-source-plugin 3.3.1`** — `attach-sources` execution at `verify` phase; produces `-sources.jar`
+  required by Maven Central.
+- **`maven-javadoc-plugin 3.11.2`** — `attach-javadocs` execution at `verify` phase; `doclint=none`,
+  `failOnError=false`; produces `-javadoc.jar` required by Maven Central.
+- **`maven-gpg-plugin`** — `sign-release` execution moved from `verify` to `install` phase so
+  sources and Javadoc jars are already attached before signing. `--pinentry-mode loopback`
+  added to `gpgArguments` to allow `-Dgpg.passphrase=...` without a GUI pinentry agent.
+- **`distributionManagement`** — `<repository>` and `<snapshotRepository>` wired to
+  `central.sonatype.org` Central Portal publisher endpoint.
+- **Developer / SCM metadata** — `<organization>Machine Learning Cabinet</organization>`,
+  `<organizationUrl>https://ml.cab/</organizationUrl>`, SCM tag updated to `v0.1.0-RC`.
+- **All module POMs** — publish config consolidated into root POM; per-module boilerplate removed.
+
+---
+
+## Status
+
 **Session 29** — OpenAI-compatible REST API (`POST /v1/chat/completions`, `GET /v1/models`).
 
 ### OpenAI-compatible API
@@ -56,7 +233,7 @@ all error codes.
 | `messages[].role` / `.content` | `ChatMessage` | Text only; images not supported |
 | `temperature` | `SamplingParams.temperature` | 0.0–2.0; default 0.7 |
 | `top_p` | `SamplingParams.topP` | 0.0–1.0; default 0.9 |
-| `max_completion_tokens` | `SamplingParams.maxTokens` | 1–32768; default 512 |
+| `max_completion_tokens` | `SamplingParams.maxTokens` | 1–32768; default 200 |
 | `max_tokens` | `SamplingParams.maxTokens` | Deprecated alias |
 | `frequency_penalty` | `SamplingParams.repetitionPenalty` | `1 + max(0, fp/2)` |
 | `stream` | route selection | false → blocking JSON; true → SSE |
